# zed-laravel-extension

./: Cargo.toml  LICENSE  README.md  extension.toml  extension.wasm
commands/: artisan.rs  route_list.php
languages/blade/: config.toml  snippets.toml
languages/php/: config.toml  snippets.toml
laravel-lsp/: Cargo.toml  indexer.rs  scanner.rs  server.rs
src/: completion.rs  laravel_indexer.rs  laravel_scanner.rs  lib.rs
tasks/: artisan.json  artisan.toml
