[package]
name = "laravel-lsp"
version = "0.1.0"
edition = "2021"
description = "A standalone Language Server Protocol binary for Laravel projects"
authors = ["Akila Madhushanka"]

[[bin]]
name = "laravel-lsp"
path = "server.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
